--- a/gb/19/8/21/n11468119.md
+++ b/gb/19/8/21/n11468119.md
@@ -1,19 +1,19 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>不会写书法？ 就学“看书法”吧！</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/08/20190807_shouhuihsu_handwriting_05-1-600x400.jpg" />
 <h6>学会“看书法”的意义，在于培养深度的文化品味与修养，进而建立一种有品味、价值观的生活态度。（图/侯吉谅，商周出版提供）
 </h6>
 <hr>
-	<p><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B9%A6%E6%B3%95.md#1">书法</a>有点像武功，有许多东西不只是需要勤奋练习而已，要更上层楼，常常需要许多“领悟”。</p>
-<h3><span style="color: #008000;">领悟<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%AC%94%E6%B3%95.md#1">笔法</a></span></h3>
-<p>历史上有许多<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B9%A6%E6%B3%95.md#1">书法</a>家对<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%AC%94%E6%B3%95.md#1">笔法</a>的领悟都是来自大自然的启发，例如雨水滴漏在墙壁、用树枝在沙地上画字、草间的蛇行、担夫争道、撑篙的动作等等，黄山谷的笔法据他自己说，即是来自观察撑篙的动作，才发展出他一波三折的笔法。</p>
+	<p>书法有点像武功，有许多东西不只是需要勤奋练习而已，要更上层楼，常常需要许多“领悟”。</p>
+<h3><span style="color: #008000;">领悟笔法</span></h3>
+<p>历史上有许多书法家对笔法的领悟都是来自大自然的启发，例如雨水滴漏在墙壁、用树枝在沙地上画字、草间的蛇行、担夫争道、撑篙的动作等等，黄山谷的笔法据他自己说，即是来自观察撑篙的动作，才发展出他一波三折的笔法。</p>
 <p>但这样的笔法其实在隶书中已经经常看到，虽然宋朝不流行隶书了，但黄山谷也有可能受到隶书的影响。书法的历史太悠久，很多东西古人早就发现或者发明了。</p>
 <p>在比较前卫的“现代书法”（或者日本式的少字书法）中，过用了许多泼、溅、洒、以头发、手指、手掌沾墨写字等等，在唐朝的时候这些书写的特技都已经有人尝试过了，至于用竹子木头这种“非毛笔”写字的方法，也早早有人试验过了，现代人平常日用不写字，怕是发明不出什么新招式的。即使发明新招式，恐怕也写不出好字。</p>
 <p>写字不要好高骛远，写字没有什么捷径，只能按步就班的努力。想要速成的人，最后一定失败，就我而见，毫无例外。</p>
 <h3><span style="color: #008000;">学书法的目标</span></h3>
-<figure id="attachment_11468165" aria-describedby="caption-attachment-11468165" style="width: 264px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2019/08/20190821_sally_word_02.jpg" target="_blank" rel="noreferrer noopener"> <img class="wp-image-11468165 size-full" src="https://i.epochtimes.com/assets/uploads/2019/08/20190821_sally_word_02.jpg" alt="" width="264" b="642" /></a><figcaption id="caption-attachment-11468165" class="wp-caption-text">学会“看书法”的意义，在于培养深度的文化品味与<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BF%AE%E5%85%BB.md#1">修养</a>，进而建立一种有品味、价值观的生活态度。（图/侯吉谅， 商周出版提供）</figcaption></figure>
+<figure id="attachment_11468165" aria-describedby="caption-attachment-11468165" style="width: 264px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2019/08/20190821_sally_word_02.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" class="wp-image-11468165 size-full" src="https://i.epochtimes.com/assets/uploads/2019/08/20190821_sally_word_02.jpg" alt="" width="264" b="642" /></a><figcaption id="caption-attachment-11468165" class="wp-caption-text">学会“看书法”的意义，在于培养深度的文化品味与修养，进而建立一种有品味、价值观的生活态度。（图/侯吉谅， 商周出版提供）</figcaption></figure>
 <p>以前要求同学去看沈周、文徵明的展览，回来写心得，说希望有一天可以写得和他们一样。</p>
 <p>学生的志气可嘉，但也自不量力，这就好像，去听了音乐会，就希望可以跟马友友一样厉害，即使对专业的音乐家来说，马友友都是不可企及的天分，更何况一般人？</p>
 <p>对古代大师、现代名家的成就，要深入了解，而后才能知道，他们的成就很难追得到，即使一辈子全力以赴，也不太可能达到，对那样的成就，一般人只能佩服，甚至膜拜，这才是正确的态度。</p>
@@ -30,55 +30,49 @@
 <p>当书法家很难，但学会欣赏书法却容易，大部分人学书法，都是学写书法，大部分人教书法，也是教写书法，很少有人真正教学如何看懂书法。</p>
 <p>要学会书法至少要累积一千小时以上的正确练习，才能掌握最基础的技术，没有一千小时，或方法不对，都不可能学会写书法。</p>
 <p>学会“看书法”则简单多了，十至二十小时就可以建立完整的书法概念，知道书法史的重要人物、碑帖、书迹，以及其中的奥妙精微所在。</p>
-<p>从书法的角度，有没有<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BF%AE%E5%85%BB.md#1">修养</a>，不是会不会写书法，而是能不能看得懂一件书法的好坏在哪里。就好像说一个人有没有音乐修养，指的不是会不会作曲、演奏之类，而是有没有足够深度的音乐欣赏能力。</p>
+<p>从书法的角度，有没有修养，不是会不会写书法，而是能不能看得懂一件书法的好坏在哪里。就好像说一个人有没有音乐修养，指的不是会不会作曲、演奏之类，而是有没有足够深度的音乐欣赏能力。</p>
 <p>会不会写书法，有很多标准，玩票的、自得其乐的、刻苦耐劳的、追求经典的，只要自己高兴、不妨害别人，没什么好不好，可是面对一件书法，能不能看出好坏、优点缺点，那就和修养、文化深度有关。</p>
 <p>学会“看书法”的意义，在于培养深度的文化品味与修养，进而建立一种有品味、价值观的生活态度。</p>
 <p><span style="color: #000000;"><a style="color: #000000;" href="https://www.books.com.tw/products/0010827787" target="_blank" rel="noopener noreferrer">&lt;本文摘自<span style="color: #0000ff;">书法与生活</span>，商周出版&gt;</a></span></p>
 <p>（网站专文）</p>
-<h3><span style="color: #008000;">?<a style="color: #008000;" href="https://github.com/19920513/djy/blob/master/gb/19/8/7/n11436345.md#1" target="_blank" rel="noopener noreferrer">学好书法为何这么难？书法大师如是说（上）</a></span><br />
-<span style="color: #008000;"> ?<a style="color: #008000;" href="https://github.com/19920513/djy/blob/master/gb/19/8/7/n11436570.md#1" target="_blank" rel="noopener noreferrer">学好书法为何这么难？书法大师如是说（下）</a></span><br />
-<span style="color: #008000;"> ?<a style="color: #008000;" href="https://github.com/19920513/djy/blob/master/gb/19/8/21/n11468110.md#1" target="_blank" rel="noopener noreferrer">“一个简单的横画”看出功力 如何写字不俗？</a></span></h3>
+<h3><span style="color: #008000;">?<a style="color: #008000;" href="https://github.com/1992513/djy/blob/master/gb/19/8/7/n11436345.md#1" target="_blank" rel="noopener noreferrer">学好书法为何这么难？书法大师如是说（上）</a></span><br />
+<span style="color: #008000;"> ?<a style="color: #008000;" href="https://github.com/1992513/djy/blob/master/gb/19/8/7/n11436570.md#1" target="_blank" rel="noopener noreferrer">学好书法为何这么难？书法大师如是说（下）</a></span><br />
+<span style="color: #008000;"> ?<a style="color: #008000;" href="https://github.com/1992513/djy/blob/master/gb/19/8/21/n11468110.md#1" target="_blank" rel="noopener noreferrer">“一个简单的横画”看出功力 如何写字不俗？</a></span></h3>
 <p>责任编辑：孟凤</p>
-	
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/19/7/12/n11380804.md#1">孙大川书法艺术展 舞墨中品味山川之美</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/19/7/23/n11404309.md#1">台湾古典诗：烽火仁师（二）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/19/7/26/n11411654.md#1">四海书院第3届笔会波士顿举行</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/19/7/28/n11414301.md#1">关怀海洋生态 林昆辉父子举办陶艺联展</a></li>
-<hr>
-
-
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/6/12/n3284139.md#1">沉粹典丽 风骨逆劲──唐初四大书法家之 虞世南</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/10/7/n3394783.md#1">后世圭臬 唐楷第一书家欧阳询</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/16/7/2/n8059920.md#1">【千古英雄人物】唐太宗(22) 墨海椽笔</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/12/n9133922.md#1">【书法漫谈】书法家的对话：放松与放纵</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163925.md#1">唐代书法漫谈（1）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163955.md#1">唐代书法漫谈（2）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163956.md#1">唐代书法漫谈（3）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/19/1/16/n10979954.md#1">仁心执法 让死刑判起来更难的唐太宗</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/22/1/16/n13507994.md#1">【书法漫谈】中国书法的神性特点</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/23/6/29/n14025211.md#1">宏硕壮阔 最具帝王气象的唐太宗诗歌</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/6/n10195670.md#1" target="_blank">陈峰：造毛泽东像那些稀罕事儿</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/30/n10679081.md#1" target="_blank">《求救信》获墨西哥电影节纪录片评委大奖</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/9/n10040271.md#1" target="_blank">共产暴政录：“胡风反革命集团”案</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/5/n10830342.md#1" target="_blank">走出磨难 费城女医生找到真正的自我</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/9/n13902596.md#1">【未解之谜】珍妮预言之三 2037年进入新纪元？！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/6/n13901111.md#1">【百年真相】以“亿元”计 中共十大贪官排行榜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/4/n13898887.md#1">乱世一书生 怎能拥有安定一城的能量？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/11/n13904409.md#1">郑愚山：供销社的“大爷”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/13/n13906403.md#1">因手术并发症濒死 男童一窥下辈子转生安排</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/14/n13906615.md#1">【未解之谜】西方极乐世界游记（上）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/14/n13907086.md#1">【新闻看点】官称近6万染疫死 多方估算远不止</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/14/n13906919.md#1">【十字路口】守日保台 美日新战术联合抗共</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/13/n13906069.md#1">多名中共警察密集死亡 最年轻者仅37岁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/13/n13906386.md#1">【新闻大家谈】王维洛：知青实名信 震惊党中央</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/13/n13906323.md#1">攀上“高官女儿”云南公安局长给骗子数亿项目</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/12/n13905708.md#1">称马国影星杨紫琼为香港演员 港共官员遭炮轰</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/13/n13906157.md#1">蓝心湄录除夕节目 与陈美凤唱跳秀少女穿搭</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/13/n13906509.md#1">75岁著名歌唱家谢莉斯去世 讣告未披露病因</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/13/n13906492.md#1">首度回应搬回香港原因 蔡少芬否认在沪豪宅放租</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/12/n13905743.md#1">曾与金城武演父子 港星陈万雷在大陆染疫去世</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/6/n13900876.md#1">战胜感冒的5个最佳方法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/7/n13901669.md#1">不起眼的青柠有6大功效 甚至能救人一命</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/6/n13900963.md#1">千万别刚起床就喝咖啡！这时间点喝最好</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/11/n13904654.md#1">18个存钱小技巧 还能让你成为百万富翁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/13/n13906422.md#1">每天吃的沙拉油安全吗？一动作增癌症、失智风险</a></li>
-<hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/8/21/n11468119.htm">不会写书法？ 就学“看书法”吧！</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/19/8/21/n11468119.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540909.md#1">【未解之谜】“午夜之锤”早已被预知？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544926.md#1">【纪元焦点】南航机长用生命反抗职场霸凌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14545002.md#1">【直播】庆美国独立日 华府燃放烟火</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544499.md#1">【直播】庆美国独立日 华府大游行</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543479.md#1">砸钱也没用 中共这些技术被“卡脖子”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543820.md#1">广东制造业陷寒冬 老牌厂知名外企宣告结业</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543930.md#1">人民日报刊文纪念李克强冥诞 求是网删文</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542957.md#1">末日预言疯传 唐绮阳坦言已录好影片交代一事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543090.md#1">《奥德赛》首支预告片在影院播出 内容已流出</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543281.md#1">刘晓庆珠宝公司因民间借贷纠纷被执行44.9万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543550.md#1">美国独立日烟火秀 纽约五大区最佳观赏地</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14539807.md#1">简单穴位按摩与食疗 保您不再做“起夜家”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543926.md#1">专家：经常做恶梦的人 早死概率增为3倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14539895.md#1">强化免疫有三关 中医从脏腑打造防御屏障</a></li>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/8/21/n11468119.htm">不会写书法？ 就学“看书法”吧！</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/19/8/21/n11468119.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
